# DFM1PTH

./: CMakeLists.txt  DFM1PTH.pc.in  README  config.h.cmake  dune.module  installDejian2021_1p.sh
DFM1PTH/: CMakeLists.txt  computevelocities.hh  main.cc  params.input  problem_bulk.hh  problem_lowdim.hh  properties.hh  spatialparams_bulk.hh  spatialparams_lowdim.hh
cmake/modules/: CMakeLists.txt
doc/doxygen/: Doxylocal
dune/: CMakeLists.txt
dune/DFM1PTH/: CMakeLists.txt  DFM1PTH.hh
src/: CMakeLists.txt  DFM1PTH.cc
